# pycountscjb

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycountscjb/: __init__.py  plotting.py  pycountscjb.py
tests/: test_pycountscjb.py
