[tool.poetry]
name = "pycountscjb"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Chris Bayne"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.10.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
